# circom-lsp

client/: package-lock.json  package.json
client/src/test/suite/: index.ts
server/: Cargo.toml  circom_deps.sh
server/circom-lsp/: Cargo.toml
server/circom-lsp/src/: ast.rs  backend.rs  constants.rs  parse.rs
server/parser/: Cargo.toml
server/program_structure/: Cargo.toml
server/program_structure/src/program_library/: file_definition.rs
server/type_analysis/: Cargo.toml
