[package]
name = "circom-lsp"
version = "0.1.4"
edition = "2021"
authors = ["rubydusa <rubydusa@protonmail.com>"]
license = "GPL-3.0"
description = "LSP server for Circom"
homepage = "https://github.com/rubydusa/circom-lsp"
repository = "https://github.com/rubydusa/circom-lsp"

[dependencies]
tower-lsp = "0.20.0"

# lalrpop-util in this specific version required for circom parser to work
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
circom_parser = { path = "../parser/", package = "circom-lsp-parser", version = "2.1.7"}
circom_type_checker = { path = "../type_analysis/", package = "circom-lsp-type-analysis", version = "2.1.7" }
circom_structure = { path = "../program_structure/", package = "circom-lsp-program-structure", version = "2.1.7" }
ropey = "1.6.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "io-std"] }
codespan-reporting = "0.11.1"
itertools = "0.12.0"
num-traits = "0.2.17"
tempfile = "3.9.0"
clap = { version = "4.4.18", features = ["derive"] }
