[package]
name = "circom-lsp-parser"
version = "2.1.7"
authors = ["Costa Group UCM","iden3"]
edition = "2021"
build = "build.rs"

[build-dependencies]
rustc-hex = "2.1.0"
lalrpop = { version = "0.20.0", features = ["lexer"] }
num-bigint-dig = "0.8.4"
num-traits = "0.2.17"

[dependencies]
program_structure = {path = "../program_structure", package = "circom-lsp-program-structure", version = "2.1.7"}
lalrpop-util = "0.20.0"
regex = "1.10.2"
rustc-hex = "2.1.0"
num-bigint-dig = "0.8.4"
num-traits = "0.2.17"
serde = "1.0.195"
serde_derive = "1.0.195"
