[package]
name = "circom-lsp-program-structure"
version = "2.1.7"
authors = ["Costa Group UCM","iden3"]
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
regex = "1.10.2"
rustc-hex = "2.1.0"
num-bigint-dig = "0.8.4"
num-traits = "0.2.17"
serde = "1.0.195"
serde_derive = "1.0.195"
